再次说明了函数模板的使用方法

--- a/function/函数模板.md
+++ b/function/函数模板.md
@@ -1,12 +1,15 @@
-# 函数模板的使用
+# 函数模板的使用  
 
-用法：
-`template <typename T>`
-`void swap(T &a,T &b)`
-`{`
-    `T temp;`
-    `temp=a;`
-    `a=b;`
-    `b=temp;`
-`}`
-template和typename都是必须的，尖括号也是必须的，类型名可以随意变
+用法：  
+`template <typename T>`  
+`void swap(T &a,T &b)`  
+`{`  
+    `T temp;`  
+    `temp=a;`  
+    `a=b;`  
+    `b=temp;`  
+`}`  
+template和typename都是必须的，尖括号也是必须的，类型名可以随意变  
+**注意：在函数定义和函数声明中，都要在前面加函数模板的使用声明，如上述代码的函数声明需要像这样：**  
+`template <typename T>`  
+`void swap(T &a,T &b);`  
