补充说明了类相关，并说明了this的使用

--- a/class/类的使用.md
+++ b/class/类的使用.md
@@ -23,4 +23,4 @@
 显式地调用构造函数：  
 `Stock food = Stock ("world",7,7.7);`  
 隐式地调用构造函数：  
-`Stock food ("world",7,7.7);`  
+`Stock food ("world",7,7.7);`  //这样效率更高，少了赋值的步骤  
