--- a/class/类的说明.md
+++ b/class/类的说明.md
@@ -2,4 +2,31 @@
   
 在类中声明的函数就是内联函数  
 
+系统分配的构造和析构函数是栈式的，可以自己用new改成堆式  
 
+默认构造函数不进行传参，如果有参数也是设置好的默认参数  
+
+每个类都只能有一个析构函数
+
+`const Stock land=Stock("hey yourself")`  
+`land.show()`
+**在上述代码中，编译器将拒绝第二行代码，这是因为无法保证show()函数不会修改对象land**  
+show()函数应该这样声明和定义：  
+`void show() const;`  
+`void stock::show() const;`  
+  
+`class Bakery{`  
+`private:`
+    `const int Months=12;`  
+    `double costs[Months];}`  
+**上述代码是行不通的，因为类在被调用前，没有被创建，所以没有存储值的空间**  
+所以可以这样做，在类中声明一个枚举：  
+`class Bakery{`  
+`private:`
+    `enum {Months=12};`  
+    `double costs[Months];}`  
+或是声明一个静态常量：  
+`class Bakery{`  
+`private:`
+    `static const int Months=12;`  
+    `double costs[Months];}`  
