类中静态数据的说明，并编写了vector项目

--- a/class/类的说明.md
+++ b/class/类的说明.md
@@ -30,3 +30,10 @@ show()函数应该这样声明和定义：
 `private:`
     `static const int Months=12;`  
     `double costs[Months];}`  
+  
+*然而，在类中设置静态数据需要注意很多事情：静态数据成员在类声明中声明，在类定义文件中初始化*  
+//在类的头文件class.h中  
+`static int a;`  
+//在类的定义文件class.cpp中  
+`int class::a=0`//注意作用域，并且不需要再写static关键字  
+//不在类的头文件中初始化静态数据是因为需要防止在别的文件中包含头文件时就被初始化静态数据，从而占用内存空间，如果在多个文件中包含此头文件，静态数据会被重复初始化多次。  
